made the user controller
